--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,10 @@ pgvector==0.4.1
 python-dotenv==1.0.0
 Werkzeug==2.3.7
 SQLAlchemy==2.0.21
-gunicorn==21.2.0 
+gunicorn==21.2.0
+# Resume parsing dependencies
+PyPDF2==3.0.1
+spacy==3.7.2
+nltk==3.8.1
+scikit-learn==1.3.2
+python-multipart==0.0.6 
