(feat) new update and finalize the candidate profile api

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # Database Configuration
 DATABASE_URL=postgresql://username:password@localhost:5432/ai_recruitment_db
 
+# Azure OpenAI
+AZURE_OPENAI_API_KEY=
+AZURE_OPENAI_ENDPOINT=
+AZURE_API_VERSION=
+AZURE_OPENAI_DEPLOYMENT_NAME=
+
 # Flask Configuration
 FLASK_ENV=development
 FLASK_DEBUG=True
