--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,8 @@ PyPDF2==3.0.1
 spacy==3.7.2
 nltk==3.8.1
 scikit-learn==1.3.2
-python-multipart==0.0.6 
+python-multipart==0.0.6
+langchain==0.3.27
+langchain-openai==0.3.29
+openai==1.99.9
+langchain-core==0.3.74
