(feat) bulk update ai summary and embedding

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ AZURE_OPENAI_ENDPOINT=
 AZURE_API_VERSION=
 AZURE_OPENAI_DEPLOYMENT_NAME=
 
+# Bulk AI Regeneration Configuration
+AI_BULK_MAX_CONCURRENT_WORKERS=5          # Max parallel processes (5-8 recommended)
+AI_BULK_RATE_LIMIT_DELAY_SECONDS=1.0      # Delay between processes in seconds (2 - 0.5 recommended)
+
 # Flask Configuration
 FLASK_ENV=development
 FLASK_DEBUG=True
