(feat) docker file build, and update env example

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,53 @@
-# Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/ai_recruitment_db
+# AI Recruitment Backend Environment Configuration (Development)
 
-# Azure OpenAI
-AZURE_OPENAI_API_KEY=
-AZURE_OPENAI_ENDPOINT=
-AZURE_API_VERSION=
-AZURE_OPENAI_DEPLOYMENT_NAME=
+# Flask Configuration
+FLASK_ENV=development #Turn it to 'production' when in production mode
+FLASK_DEBUG=True #Turn debug off in production mode
+FLASK_APP=app.py
+HOST=0.0.0.0
+PORT=5000
+WORKERS=4
 
 # Bulk AI Regeneration Configuration
 AI_BULK_MAX_CONCURRENT_WORKERS=5          # Max parallel processes (5-8 recommended)
 AI_BULK_RATE_LIMIT_DELAY_SECONDS=1.0      # Delay between processes in seconds (2 - 0.5 recommended)
 
-# Flask Configuration
-FLASK_ENV=development
-FLASK_DEBUG=True
+# Balanced hybrid sematic and key search approach (recommended at 0.7)
+SEMANTIC_SEARCH_SEMANTIC_WEIGHT=0.7
 
-# API Configuration
-API_HOST=0.0.0.0
-API_PORT=5000 
+# Database Configuration (External - you handle this manually)
+DATABASE_URL=postgresql://username:password@your-db-host:5432/postgres
+
+# OpenAI Configuration
+AZURE_OPENAI_API_KEY=your_azure_openai_api_key_here
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_API_VERSION=2024-02-15-preview
+AZURE_OPENAI_DEPLOYMENT_NAME=
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE=/app/logs/app.log
+
+# Security Configuration
+SECRET_KEY=your_secret_key_here_change_in_production
+JWT_SECRET_KEY=your_jwt_secret_key_here_change_in_production
+
+# File Upload Configuration
+MAX_CONTENT_LENGTH=16777216
+UPLOAD_FOLDER=/app/uploads
+ALLOWED_EXTENSIONS=pdf,doc,docx
+
+# AI Model Configuration
+SPACY_MODEL=en_core_web_sm
+NLTK_DATA_PATH=/app/nltk_data
+
+# Performance Configuration
+GUNICORN_WORKERS=4
+GUNICORN_WORKER_CLASS=sync
+GUNICORN_TIMEOUT=120
+GUNICORN_KEEP_ALIVE=2
+
+# Health Check Configuration
+HEALTH_CHECK_INTERVAL=30
+HEALTH_CHECK_TIMEOUT=30
+HEALTH_CHECK_RETRIES=3
