(feat) azure di function

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,14 @@ AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
 AZURE_API_VERSION=2024-02-15-preview
 AZURE_OPENAI_DEPLOYMENT_NAME=
 
+# Resume Parser Configuration
+# Set to 'true' to use Azure Document Intelligence, 'false' for open-source spaCy/NLTK
+USE_AZURE_DOCUMENT_INTELLIGENCE=false
+
+# Azure Document Intelligence (only needed if USE_AZURE_DOCUMENT_INTELLIGENCE=true)
+AZURE_DI_ENDPOINT=https://your-document-intelligence-resource.cognitiveservices.azure.com/
+AZURE_DI_API_KEY=your_document_intelligence_api_key
+
 # Logging Configuration
 LOG_LEVEL=INFO
 LOG_FILE=/app/logs/app.log
