--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ spacy==3.7.2
 nltk==3.8.1
 scikit-learn==1.3.2
 python-multipart==0.0.6
+# Azure Document Intelligence SDK
+azure-ai-documentintelligence==1.0.0b4
 langchain==0.3.27
 langchain-openai==0.3.29
 openai==1.99.9
