(fix) CORS whitelist env

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ SEMANTIC_SEARCH_SEMANTIC_WEIGHT=0.7
 # Database Configuration (External - you handle this manually)
 DATABASE_URL=postgresql://username:password@your-db-host:5432/postgres
 
+# CORS Whitelist for multiple frontend URLs (comma-separated):
+FRONTEND_URL=https://another-frontend.example.com,https://staging-frontend.example.com
+ADDITIONAL_CORS_ORIGINS=https://example.com,https://another-domain.com
+
 # OpenAI Configuration
 AZURE_OPENAI_API_KEY=your_azure_openai_api_key_here
 AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
