(feat) resume parser add langextract option

--- a/.env.example
+++ b/.env.example
@@ -26,11 +26,15 @@ ADDITIONAL_CORS_ORIGINS=https://example.com,https://another-domain.com
 AZURE_OPENAI_API_KEY=your_azure_openai_api_key_here
 AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
 AZURE_API_VERSION=2024-02-15-preview
-AZURE_OPENAI_DEPLOYMENT_NAME=
+AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4.1-mini
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-3-small
 
 # Resume Parser Configuration
 # Set to 'true' to use Azure Document Intelligence, 'false' for open-source spaCy/NLTK
-USE_AZURE_DOCUMENT_INTELLIGENCE=false
+# USE_AZURE_DOCUMENT_INTELLIGENCE=false
+
+# Three parsing methods now supported: (spacy, azure_di, langextract)
+RESUME_PARSING_METHOD=spacy
 
 # Azure Document Intelligence (only needed if USE_AZURE_DOCUMENT_INTELLIGENCE=true)
 AZURE_DI_ENDPOINT=https://your-document-intelligence-resource.cognitiveservices.azure.com/
