--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,10 @@ scikit-learn==1.3.2
 python-multipart==0.0.6
 # Azure Document Intelligence SDK
 azure-ai-documentintelligence==1.0.0b4
+# LangExtract for enhanced NER
+langextract==1.0.7
+# LangChain and OpenAI for LLM integration
 langchain==0.3.27
 langchain-openai==0.3.29
 openai==1.99.9
 langchain-core==0.3.74
-scikit-learn
