--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,18 @@ HOST=0.0.0.0
 PORT=5000
 WORKERS=4
 
-# Bulk AI Regeneration Configuration
+# Bulk AI Configuration
 AI_BULK_MAX_CONCURRENT_WORKERS=5          # Max parallel processes (5-8 recommended)
 AI_BULK_RATE_LIMIT_DELAY_SECONDS=1.0      # Delay between processes in seconds (2 - 0.5 recommended)
+
+# Batch Parse CV Configuration
+# Conservative - 10MB individual, 100MB batch
+MAX_CONTENT_LENGTH=10485760
+BATCH_UPLOAD_LIMIT=104857600
+
+# Production limits - 50MB individual, 1GB batch
+# MAX_CONTENT_LENGTH=52428800
+# BATCH_UPLOAD_LIMIT=1073741824
 
 # Balanced hybrid sematic and key search approach (recommended at 0.7)
 SEMANTIC_SEARCH_SEMANTIC_WEIGHT=0.7
